--- a/Trial 1.2.html
+++ b/Trial 1.2.html
@@ -6,8 +6,32 @@
     <body>
         <h1>Haaaaaiiiiiiiii</h1>
 
+        <p>Nyoba bikin paragraf sama list</p>
+        <hr>
+        <ol type="1">
+            <li>One</li>
+            <li>Two</li>
+        </ol>
         <h2>Apa lagi yak?</h2>
-
+        <hr>
+        <style>
+            table, th, td {
+                border: 1px solid blueviolet;
+            }
+        </style>
+        <table>
+            <tr>
+                <th>Nama</th>
+                <th>Email</th>
+                <th>Nomor HP</th>
+            </tr>
+            <tr>
+                <td>Jaya</td>
+                <td>bangsub</td>
+                <td>0090909090</td>
+            </tr>
+        </table>
         <h3>yay keknya bisa</h3>
+        <img src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg" width="300" height="300"/>
     </body>
 </html>
